<resources>
    <string name="app_name">Projekat</string>
    <string name="knjige">Knjige</string>
    <string name="autori">Autori</string>
    <string name="komentari">Komentari</string>
    <string name="obrisi">Obrisi</string>
    <string name="dodaj">Dodaj</string>
    <string name="unesite_naslov_knjige">Unesite naslov knjige</string>
    <string name="unesite_broj_stranica">Unesite broj stranica</string>
    <string name="unesite_tip_poveza">Unesite tip poveza</string>
    <string name="unesite_zanr">Unesite zanr</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="unesite_ime_i_prezime">Unesite ime i prezime</string>
    <string name="unesite_komentar">Unesite komentar</string>
    <string name="naslov">Naslov: </string>
    <string name="broj_stranica">Broj stranica: </string>
    <string name="povez">Povez: </string>
    <string name="zanr">Zanr: </string>
    <string name="autor">Autor:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Login</string>
    <string name="login">Login</string>
    <string name="register">Registracija</string>
    <string name="name">Ime</string>
    <string name="lastname">Prezime</string>
    <string name="number">Telefon</string>
    <string name="trazi_dozvolu">Trazi dozvolu</string>
    <string name="trazi_dozvolu2">Trazi lokaciju</string>
    <string name="oboji_element">Oboji element</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="turn_notif_on">Stop notification</string>
    <string name="pref_file">pref_file</string>
    <string name="settings">Settings</string>
</resources>