<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", must appear as action button if possible. -->
    <item
        android:id="@+id/action_knjige"
        android:title="@string/knjige"
        app:showAsAction="never"/>

    <item android:id="@+id/action_autori"
        android:title="@string/autori"
        app:showAsAction="never"/>

    <item android:id="@+id/action_komentari"
        android:title="@string/komentari"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_profil"
        android:title="@string/profil"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>
