<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".fragments.ProfilFragment">


    <TextView
        android:id="@+id/profil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:text="Profil"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil"
        android:enabled="false"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:autofillHints="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/lastname"
        android:imeOptions="actionDone"
        android:autofillHints="@string/lastname"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/number"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:autofillHints="@string/number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <Button
        android:id="@+id/izmena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="0dp"
        android:enabled="true"
        android:text="Izmeni profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />


    <!--
        <TextView
            android:id="@+id/profil"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            android:textAlignment="center"
            android:text="Profil"
        />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:hint="@string/prompt_email"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/lozinka"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:hint="@string/prompt_password"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/ime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:hint="@string/name"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/prezime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:hint="@string/lastname"

            android:textAlignment="center"/>

        <TextView
            android:id="@+id/telefon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="25dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:hint="@string/number"
            android:textAlignment="center"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>